# phoenix-engine

./: .gitignore  LICENSE.md  README.md  api_server.py  install_phoenix.ps1  pyproject.toml
catalog/: connectors.json
catalog/essentials/: assistant.json  chat.json  cpu.json
catalog/studios/: developer.json  image.json  research.json  voice.json
catalog/suites/: full.json  legacy.json
core/contracts/: __init__.py  agent.py  backup.py  benchmark.py  config.py  connector.py  engine.py  experience.py  gateway.py  hardware.py  installer.py  knowledge.py  mission.py  model.py  notification.py  observability.py  pipeline.py  plugin.py  rules.py  runtime.py  scheduler.py  security.py  storage.py  updater.py  workflow.py
core/domain/: configuration.py  engine.py  execution.py  hardware.py  machine.py  models.py  provision.py  runtime.py  telemetry.py  workflows.py
core/events/: __init__.py  base.py  bus.py  types.py
core/kernel/: __init__.py  kernel.py  lifecycle.py  plugin_base.py  plugin_context.py  plugin_loader.py  registry.py
core/shared/: logging.py
data/: knowledge_base.json  provisioning_catalog.json  resident_memory.json
install/: common.ps1  linux.ps1  storage_scanner.ps1  windows.ps1
phoenix_kernel/: __init__.py  cloud_sync.py  kernel.py  state.py
phoenix_kernel/01_discovery/: discovery_core.py  discovery_engine.py  engine.py  interfaces.py
phoenix_kernel/02_budget/: README.md  engine.py  interfaces.py
phoenix_kernel/03_planner/: engine.py  evaluator.py  interfaces.py  knowledge_engine.py
phoenix_kernel/09_api/: engine.py  (+1 more)
web/: index.html
(+55 files in other folders)
