[project]
name = "aivisions-hardware-discovery-core"
version = "1.0.0"
description = "AIVisions Hardware Discovery Core"
requires-python = ">=3.10"
dependencies = [
    "psutil>=5.9.0",
    "py-cpuinfo>=9.0.0",
    "pywin32>=306; sys_platform == 'win32'",
    "WMI>=1.5.1; sys_platform == 'win32'"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hardware_engine*"]